improved findBy api
